dev: native build